force-app/main/default/objects/Opportunity/fields/Appropriateness_Assessment_Undertaken__c.field-meta.xml
<CustomField>
    <fullName>Appropriateness_Assessment_Undertaken__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appropriateness Assessment Undertaken</label>
    <type>Checkbox</type>
</CustomField>