force-app/main/default/objects/Opportunity/fields/Banker__c.field-meta.xml
<CustomField>
    <fullName>Banker__c</fullName>
    <formula>Account.RM_Name__r.FirstName  &amp; &quot; &quot;  &amp;  Account.RM_Name__r.MiddleName &amp; &quot; &quot; &amp; Account.RM_Name__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Lookup to the Banker specified on the Customer record</inlineHelpText>
    <label>Banker</label>
    <type>Text</type>
</CustomField>