force-app/main/default/objects/Opportunity/fields/Business_Banking_Centre__c.field-meta.xml
<CustomField>
    <fullName>Business_Banking_Centre__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Banking Centre</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>