force-app/main/default/objects/Opportunity/fields/ClientIntent__c.field-meta.xml
<CustomField>
    <fullName>ClientIntent__c</fullName>
    <label>Client Intent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buy</fullName>
            </value>
            <value>
                <fullName>Sell</fullName>
            </value>
            <value>
                <fullName>Borrow</fullName>
            </value>
            <value>
                <fullName>Bank Buys Base Ccy</fullName>
            </value>
            <value>
                <fullName>Bank Sells Base Ccy</fullName>
            </value>
            <value>
                <fullName>Debt Hedge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>