force-app/main/default/objects/Opportunity/fields/Date_Readied__c.field-meta.xml
<CustomField>
    <fullName>Date_Readied__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Readied</label>
    <type>Date</type>
</CustomField>