force-app/main/default/objects/Opportunity/fields/Deal_Confirmation_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Deal_Confirmation_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Deal Confirmation Date/Time</label>
    <type>DateTime</type>
</CustomField>