force-app/main/default/objects/Opportunity/fields/Deal_Executed_By__c.field-meta.xml
<CustomField>
    <fullName>Deal_Executed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Executed By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Deal Executed By)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>