force-app/main/default/objects/Opportunity/fields/Deal_Executed_Tel_Number__c.field-meta.xml
<CustomField>
    <fullName>Deal_Executed_Tel_Number__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Deal Executed Tel Number &amp; Time</label>
    <length>40</length>
    <type>Text</type>
</CustomField>