force-app/main/default/objects/Opportunity/fields/Deal_Nature__c.field-meta.xml
<CustomField>
    <fullName>Deal_Nature__c</fullName>
    <label>Deal Nature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Loan – Structured Component</fullName>
            </value>
            <value>
                <fullName>New Wholesale Product</fullName>
            </value>
            <value>
                <fullName>Restructure Wholesale Product</fullName>
            </value>
            <value>
                <fullName>Amendment – Floating Component</fullName>
            </value>
            <value>
                <fullName>Amendment – Structured Component</fullName>
            </value>
            <value>
                <fullName>Restructure</fullName>
            </value>
            <value>
                <fullName>New Component – Floating</fullName>
            </value>
            <value>
                <fullName>Floating to Structured Component</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Other Bank Deal</fullName>
            </value>
            <value>
                <fullName>Amendment � Floating Component</fullName>
                <isActive>false</isActive>
                <label>Amendment � Floating Component</label>
            </value>
            <value>
                <fullName>Amendment � Structured Component</fullName>
                <isActive>false</isActive>
                <label>Amendment � Structured Component</label>
            </value>
            <value>
                <fullName>New Component � Floating</fullName>
                <isActive>false</isActive>
                <label>New Component � Floating</label>
            </value>
            <value>
                <fullName>New Loan � Structured Component</fullName>
                <isActive>false</isActive>
                <label>New Loan � Structured Component</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>