force-app/main/default/objects/Opportunity/fields/Deal_Reference__c.field-meta.xml
<CustomField>
    <fullName>Deal_Reference__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Deal Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>