force-app/main/default/objects/Opportunity/fields/Deal_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Deal_Review_Status__c</fullName>
    <label>Deal Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Ready For Post Deal Check</fullName>
            </value>
            <value>
                <fullName>Post Deal Check Complete</fullName>
            </value>
            <value>
                <fullName>Readiness Overdue</fullName>
                <isActive>false</isActive>
                <label>Readiness Overdue</label>
            </value>
            <value>
                <fullName>Readiness Pending</fullName>
                <isActive>false</isActive>
                <label>Readiness Pending</label>
            </value>
            <value>
                <fullName>Ready for Review</fullName>
                <isActive>false</isActive>
                <label>Ready for Review</label>
            </value>
            <value>
                <fullName>Review Overdue</fullName>
                <isActive>false</isActive>
                <label>Review Overdue</label>
            </value>
            <value>
                <fullName>Reviewed</fullName>
                <isActive>false</isActive>
                <label>Reviewed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>