force-app/main/default/objects/Opportunity/fields/Face_Value_Amount__c.field-meta.xml
<CustomField>
    <fullName>Face_Value_Amount__c</fullName>
    <label>Face Value Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>