force-app/main/default/objects/Opportunity/fields/FX_Direct__c.field-meta.xml
<CustomField>
    <fullName>FX_Direct__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FX Direct</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>