force-app/main/default/objects/Opportunity/fields/IRRM_Authorised_Contact__c.field-meta.xml
<CustomField>
    <fullName>IRRM_Authorised_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IRRM Authorised Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (IRRM Authorised Contact)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>