force-app/main/default/objects/Opportunity/fields/isQ6Available__c.field-meta.xml
<CustomField>
    <fullName>isQ6Available__c</fullName>
    <formula>IF(Account.Officer_Code__c != null, true, false)</formula>
    <label>Is Q6 Available</label>
    <type>Checkbox</type>
</CustomField>