force-app/main/default/objects/Opportunity/fields/Opp_Action__c.field-meta.xml
<CustomField>
    <fullName>Opp_Action__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Action</label>
    <length>10</length>
    <type>Text</type>
</CustomField>