force-app/main/default/objects/Opportunity/fields/Opp_BankerAdded__c.field-meta.xml
<CustomField>
    <fullName>Opp_BankerAdded__c</fullName>
    <formula>Account.BankerAdded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Banker Added</label>
    <type>Checkbox</type>
</CustomField>