force-app/main/default/objects/Opportunity/fields/Opp_BankName__c.field-meta.xml
<CustomField>
    <fullName>Opp_BankName__c</fullName>
    <label>Bank Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CB</fullName>
            </value>
            <value>
                <fullName>YB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>