force-app/main/default/objects/Opportunity/fields/Opp_BaseEquivalent__c.field-meta.xml
<CustomField>
    <fullName>Opp_BaseEquivalent__c</fullName>
    <label>Base Equivalent</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>