force-app/main/default/objects/Opportunity/fields/Opp_BranchNumber__c.field-meta.xml
<CustomField>
    <fullName>Opp_BranchNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Branch Number</label>
    <length>35</length>
    <type>Text</type>
</CustomField>