force-app/main/default/objects/Opportunity/fields/Opp_BrokerCode__c.field-meta.xml
<CustomField>
    <fullName>Opp_BrokerCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Broker Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>