force-app/main/default/objects/Opportunity/fields/Opp_BusinessCentreText__c.field-meta.xml
<CustomField>
    <fullName>Opp_BusinessCentreText__c</fullName>
    <formula>Account.RM_Name__r.Con_Team__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Centre</label>
    <type>Text</type>
</CustomField>