force-app/main/default/objects/Opportunity/fields/Opp_CorpCode__c.field-meta.xml
<CustomField>
    <fullName>Opp_CorpCode__c</fullName>
    <formula>IF( NOT( ISBLANK( TEXT(Opp_BankName__c) ) ) , TEXT(Opp_BankName__c) , 
IF( NOT( ISBLANK( TEXT(Account.Branch__c ) ) ), 
IF(TEXT(Account.Branch__c) = &#39;Clydesdale Bank&#39; , &#39;CB&#39;, 
IF(TEXT(Account.Branch__c) = &#39;Yorkshire Bank&#39; , &#39;YB&#39;, &#39;&#39;)), &#39;&#39;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corp Code</label>
    <type>Text</type>
</CustomField>