force-app/main/default/objects/Opportunity/fields/Opp_CurrencyPair__c.field-meta.xml
<CustomField>
    <fullName>Opp_CurrencyPair__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Currency Pair</label>
    <length>32</length>
    <type>Text</type>
</CustomField>