force-app/main/default/objects/Opportunity/fields/Opp_CustomerFullName__c.field-meta.xml
<CustomField>
    <fullName>Opp_CustomerFullName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Full Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>