force-app/main/default/objects/Opportunity/fields/Opp_DominantCurrency__c.field-meta.xml
<CustomField>
    <fullName>Opp_DominantCurrency__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dominant Currency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>