force-app/main/default/objects/Opportunity/fields/Opp_ETBookingRef__c.field-meta.xml
<CustomField>
    <fullName>Opp_ETBookingRef__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ET Booking Ref</label>
    <length>35</length>
    <type>Text</type>
</CustomField>