force-app/main/default/objects/Opportunity/fields/Opp_ETBranchNumber__c.field-meta.xml
<CustomField>
    <fullName>Opp_ETBranchNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ET Branch Number</label>
    <length>35</length>
    <type>Text</type>
</CustomField>