force-app/main/default/objects/Opportunity/fields/Opp_ETPNLCCY__c.field-meta.xml
<CustomField>
    <fullName>Opp_ETPNLCCY__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ET PNL CCY</label>
    <length>3</length>
    <type>Text</type>
</CustomField>