force-app/main/default/objects/Opportunity/fields/Opp_ETRef__c.field-meta.xml
<CustomField>
    <fullName>Opp_ETRef__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ET Ref</label>
    <length>35</length>
    <type>Text</type>
</CustomField>