force-app/main/default/objects/Opportunity/fields/Opp_ETREUTERSPNL__c.field-meta.xml
<CustomField>
    <fullName>Opp_ETREUTERSPNL__c</fullName>
    <label>ET REUTERS PNL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>