force-app/main/default/objects/Opportunity/fields/Opp_ETRMID__c.field-meta.xml
<CustomField>
    <fullName>Opp_ETRMID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ET RM ID</label>
    <length>35</length>
    <type>Text</type>
</CustomField>