force-app/main/default/objects/Opportunity/fields/Opp_ETTraderID__c.field-meta.xml
<CustomField>
    <fullName>Opp_ETTraderID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ET Trader ID</label>
    <length>35</length>
    <type>Text</type>
</CustomField>