force-app/main/default/objects/Opportunity/fields/Opp_ETWID__c.field-meta.xml
<CustomField>
    <fullName>Opp_ETWID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ET WID</label>
    <length>35</length>
    <type>Text</type>
</CustomField>