force-app/main/default/objects/Opportunity/fields/Opp_ForwardValueAdd__c.field-meta.xml
<CustomField>
    <fullName>Opp_ForwardValueAdd__c</fullName>
    <label>Forward Value Add</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>