force-app/main/default/objects/Opportunity/fields/Opp_FwdCustomerRate__c.field-meta.xml
<CustomField>
    <fullName>Opp_FwdCustomerRate__c</fullName>
    <label>Fwd Customer Rate</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>