force-app/main/default/objects/Opportunity/fields/Opp_FwdMargin__c.field-meta.xml
<CustomField>
    <fullName>Opp_FwdMargin__c</fullName>
    <label>Fwd Margin</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>