force-app/main/default/objects/Opportunity/fields/Opp_FXFarDate__c.field-meta.xml
<CustomField>
    <fullName>Opp_FXFarDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FX Far Date</label>
    <type>Date</type>
</CustomField>