force-app/main/default/objects/Opportunity/fields/Opp_FXFwdPoints__c.field-meta.xml
<CustomField>
    <fullName>Opp_FXFwdPoints__c</fullName>
    <label>FX Fwd Points</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>