force-app/main/default/objects/Opportunity/fields/Opp_FXSpotRate__c.field-meta.xml
<CustomField>
    <fullName>Opp_FXSpotRate__c</fullName>
    <label>Market Spot Rate</label>
    <precision>18</precision>
    <scale>12</scale>
    <type>Number</type>
</CustomField>