force-app/main/default/objects/Opportunity/fields/Opp_GLAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>Opp_GLAccountNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GL Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>