force-app/main/default/objects/Opportunity/fields/Opp_KapitiCustomer__c.field-meta.xml
<CustomField>
    <fullName>Opp_KapitiCustomer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Kapiti Customer</label>
    <length>30</length>
    <type>Text</type>
</CustomField>