force-app/main/default/objects/Opportunity/fields/Opp_KapitiLocation__c.field-meta.xml
<CustomField>
    <fullName>Opp_KapitiLocation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Kapiti Location</label>
    <length>40</length>
    <type>Text</type>
</CustomField>