force-app/main/default/objects/Opportunity/fields/Opp_LegacyCustomer__c.field-meta.xml
<CustomField>
    <fullName>Opp_LegacyCustomer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Legacy Customer</label>
    <length>40</length>
    <type>Text</type>
</CustomField>