force-app/main/default/objects/Opportunity/fields/Opp_MarginPercent__c.field-meta.xml
<CustomField>
    <fullName>Opp_MarginPercent__c</fullName>
    <formula>Amount /  Opp_PrimaryAmount__c</formula>
    <label>Margin Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>