force-app/main/default/objects/Opportunity/fields/Opp_NegotiatedPrice__c.field-meta.xml
<CustomField>
    <fullName>Opp_NegotiatedPrice__c</fullName>
    <label>Customer All in Rate</label>
    <precision>18</precision>
    <scale>12</scale>
    <type>Number</type>
</CustomField>