force-app/main/default/objects/Opportunity/fields/Opp_OfficerCode__c.field-meta.xml
<CustomField>
    <fullName>Opp_OfficerCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Officer Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>