force-app/main/default/objects/Opportunity/fields/Opp_PrimaryAmount__c.field-meta.xml
<CustomField>
    <fullName>Opp_PrimaryAmount__c</fullName>
    <label>Primary Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>