force-app/main/default/objects/Opportunity/fields/Opp_PrimaryCurrency__c.field-meta.xml
<CustomField>
    <fullName>Opp_PrimaryCurrency__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>