force-app/main/default/objects/Opportunity/fields/Opp_RDMShortName__c.field-meta.xml
<CustomField>
    <fullName>Opp_RDMShortName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RDM Short Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>