force-app/main/default/objects/Opportunity/fields/Opp_RunValidation__c.field-meta.xml
<CustomField>
    <fullName>Opp_RunValidation__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Run Validation</label>
    <type>Checkbox</type>
</CustomField>