force-app/main/default/objects/Opportunity/fields/Opp_SecondaryCurrency__c.field-meta.xml
<CustomField>
    <fullName>Opp_SecondaryCurrency__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>