force-app/main/default/objects/Opportunity/fields/Opp_SpotMargin__c.field-meta.xml
<CustomField>
    <fullName>Opp_SpotMargin__c</fullName>
    <label>Spot Margin</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>