force-app/main/default/objects/Opportunity/fields/Opp_SpotValueAdd__c.field-meta.xml
<CustomField>
    <fullName>Opp_SpotValueAdd__c</fullName>
    <label>Spot Value Add</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>