force-app/main/default/objects/Opportunity/fields/Opp_StartDate__c.field-meta.xml
<CustomField>
    <fullName>Opp_StartDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>