force-app/main/default/objects/Opportunity/fields/Opp_TradeDate__c.field-meta.xml
<CustomField>
    <fullName>Opp_TradeDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trade Date</label>
    <length>20</length>
    <type>Text</type>
</CustomField>