force-app/main/default/objects/Opportunity/fields/Opp_TradeDateTime__c.field-meta.xml
<CustomField>
    <fullName>Opp_TradeDateTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trade Date Time</label>
    <length>30</length>
    <type>Text</type>
</CustomField>