force-app/main/default/objects/Opportunity/fields/Opp_TradeID__c.field-meta.xml
<CustomField>
    <fullName>Opp_TradeID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Trade ID</label>
    <length>35</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>