force-app/main/default/objects/Opportunity/fields/Opp_TradeSettleDate__c.field-meta.xml
<CustomField>
    <fullName>Opp_TradeSettleDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trade Settle Date</label>
    <type>Date</type>
</CustomField>