force-app/main/default/objects/Opportunity/fields/Opp_TradeStatus__c.field-meta.xml
<CustomField>
    <fullName>Opp_TradeStatus__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trade Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>