force-app/main/default/objects/Opportunity/fields/Opp_TradeTime__c.field-meta.xml
<CustomField>
    <fullName>Opp_TradeTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trade Time</label>
    <length>20</length>
    <type>Text</type>
</CustomField>