force-app/main/default/objects/Opportunity/fields/Opp_TransactionDate__c.field-meta.xml
<CustomField>
    <fullName>Opp_TransactionDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transaction Date</label>
    <type>Date</type>
</CustomField>