force-app/main/default/objects/Opportunity/fields/Opp_TransactionMonth__c.field-meta.xml
<CustomField>
    <fullName>Opp_TransactionMonth__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transaction Month</label>
    <length>10</length>
    <type>Text</type>
</CustomField>