force-app/main/default/objects/Opportunity/fields/Opp_TransactionTime__c.field-meta.xml
<CustomField>
    <fullName>Opp_TransactionTime__c</fullName>
    <label>Transaction Time</label>
    <type>Time</type>
</CustomField>