force-app/main/default/objects/Opportunity/fields/Opp_VAConversionRate__c.field-meta.xml
<CustomField>
    <fullName>Opp_VAConversionRate__c</fullName>
    <label>VA Conversion Rate</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>