force-app/main/default/objects/Opportunity/fields/Opp_WID__c.field-meta.xml
<CustomField>
    <fullName>Opp_WID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer WID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>