force-app/main/default/objects/Opportunity/fields/Opportunity_Reference__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Reference__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Opportunity Reference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>