force-app/main/default/objects/Opportunity/fields/Opportunity_Unit__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Unit__c</fullName>
    <label>Opportunity Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Litres</fullName>
            </value>
            <value>
                <fullName>Metric Tonne</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>