force-app/main/default/objects/Opportunity/fields/Other_Currencies__c.field-meta.xml
<CustomField>
    <fullName>Other_Currencies__c</fullName>
    <label>Other Currencies</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Opportunity_Currency__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AED</fullName>
            </value>
            <value>
                <fullName>AUD</fullName>
            </value>
            <value>
                <fullName>BDT</fullName>
            </value>
            <value>
                <fullName>BGN</fullName>
            </value>
            <value>
                <fullName>BDH</fullName>
            </value>
            <value>
                <fullName>CAD</fullName>
            </value>
            <value>
                <fullName>CHF</fullName>
            </value>
            <value>
                <fullName>CNY</fullName>
            </value>
            <value>
                <fullName>CZK</fullName>
            </value>
            <value>
                <fullName>DKK</fullName>
            </value>
            <value>
                <fullName>EGP</fullName>
            </value>
            <value>
                <fullName>FJD</fullName>
            </value>
            <value>
                <fullName>HDK</fullName>
            </value>
            <value>
                <fullName>HRK</fullName>
            </value>
            <value>
                <fullName>HUF</fullName>
            </value>
            <value>
                <fullName>ILS</fullName>
            </value>
            <value>
                <fullName>INR</fullName>
            </value>
            <value>
                <fullName>JPY</fullName>
            </value>
            <value>
                <fullName>KES</fullName>
            </value>
            <value>
                <fullName>KWD</fullName>
            </value>
            <value>
                <fullName>LKR</fullName>
            </value>
            <value>
                <fullName>MAD</fullName>
            </value>
            <value>
                <fullName>MUR</fullName>
            </value>
            <value>
                <fullName>MWK</fullName>
            </value>
            <value>
                <fullName>MYR</fullName>
            </value>
            <value>
                <fullName>NOK</fullName>
            </value>
            <value>
                <fullName>NZD</fullName>
            </value>
            <value>
                <fullName>PGK</fullName>
            </value>
            <value>
                <fullName>PHP</fullName>
            </value>
            <value>
                <fullName>PKR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>