force-app/main/default/objects/Opportunity/fields/Post_Deal_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Post_Deal_Checklist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Post Deal Checklist</label>
    <referenceTo>Checklist__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>PostDealOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>