force-app/main/default/objects/Opportunity/fields/Pre_Deal_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Pre_Deal_Checklist__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Pre Deal Checklist</label>
    <referenceTo>Checklist__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>PreDealOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>