force-app/main/default/objects/Opportunity/fields/q6Code__c.field-meta.xml
<CustomField>
    <fullName>q6Code__c</fullName>
    <formula>Account.RM_Name__r.Officer_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q6 Code</label>
    <type>Text</type>
</CustomField>