force-app/main/default/objects/Opportunity/fields/Readiness_Due__c.field-meta.xml
<CustomField>
    <fullName>Readiness_Due__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Readiness Due</label>
    <type>Date</type>
</CustomField>