force-app/main/default/objects/Opportunity/fields/Reason_For_Final_Product_Selected__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Final_Product_Selected__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>You must make it clear why the client selected the transacted product over the alternatives offered.</inlineHelpText>
    <label>Reason For Final Product Selected</label>
    <type>TextArea</type>
</CustomField>